--- a/Clilc_color/styleColorC.css
+++ b/Clilc_color/styleColorC.css
@@ -61,7 +61,14 @@ main div{
 }
 
 #btn{
-   
+    text-decoration: none;
+    padding: 10px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #ffffff;
+    background-color: #1883ba;
+    border-radius: 6px;
+    border: 2px solid #0016b0;
     margin-top: 20px;
 }
 
